# zkPassport-OPRF

./: .dockerignore  .gitignore  Cargo.toml  README.md  deny.toml  justfile  run-setup.sh
.github/workflows/: audit.yml  build-and-push-node.yml  build-and-push.yml  ci.yml  e2e_test.yaml  rust_lint.yml  rust_test.yml
authentication/: Cargo.toml
authentication/src/: lib.rs
client/: Cargo.toml
client/src/: lib.rs
deploy/local/: docker-compose.yml
dev-client/: Cargo.toml
dev-client/fixtures/: zkpassport-proofs.json
dev-client/src/: main.rs
mock-oracle/: Cargo.toml
mock-oracle/src/: main.rs
node/: Cargo.toml
node/src/: config.rs  lib.rs  main.rs  metrics.rs  services.rs
salted-nullifier-authentication/: Cargo.toml
salted-nullifier-authentication/src/: lib.rs
salted-nullifier-client/src/: lib.rs
salted-nullifier-dev-client/: Cargo.toml
salted-nullifier-dev-client/fixtures/: zkpassport-proofs.json
salted-nullifier-dev-client/src/: main.rs
salted-nullifier-node/src/: lib.rs
