[workspace]
resolver = "3"
members = [
  "authentication",
  "client",
  "dev-client",
  "mock-oracle",
  "node",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
readme = "./README.md"
homepage = "https://www.taceo.io"
repository = "https://github.com/TaceoLabs/zkpassport-OPRF"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
alloy = { version = "1.4", default-features = false }
ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "0.5.3" }
ark-bn254 = { version = "0.5" }
ark-ec = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-serde-compat = { package = "taceo-ark-serde-compat", version = "0.5", default-features = false }
ark-serialize = "0.5"
async-trait = "0.1"
axum = "0.8"
axum-extra = "0.12"
axum-test = "18"
blake3 = "1"
ciborium = "0.2"
circom-types = { package = "taceo-circom-types", version = "0.2", default-features = false }
clap = "4"
config = { version = "0.15", default-features = false }
criterion = "0.8"
eddsa-babyjubjub = { package = "taceo-eddsa-babyjubjub", version = "0.5.4" }
eyre = { version = "0.6" }
futures = "0.3"
groth16-material = { package = "taceo-groth16-material", version = "0.2.1", default-features = false }
groth16-sol = { package = "taceo-groth16-sol", version = "0.2.2" }
http = "1"
humantime = "2"
humantime-serde = "1"
itertools = "0.14"
k256 = "0.13"
metrics = "0.24"
num-bigint = "0.4"
parking_lot = "0.12"
poseidon2 = { package = "taceo-poseidon2", version = "0.2", default-features = false }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
reqwest = { version = "0.12", default-features = false }
rustls = "0.23"
secrecy = "0.10"
semver = "1"
serde = { version = "1" }
serde_json = { version = "1" }
taceo-nodes-common = { version = "0.4.4", default-features = false }
taceo-nodes-observability = { version = "0.1" }
taceo-oprf = { package = "taceo-oprf", version = "0.12.1" }
thiserror = { version = "2" }
tikv-jemallocator = "0.6"
tokio = { version = "1" }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7"
tower-http = "0.6"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
uuid = { version = "1" }
webpki-roots = { version = "1.0" }
zeroize = "1"

[profile.release]
lto = true
codegen-units = 1

# This profile can be used for CI in pull requests.
[profile.ci-dev]
inherits = "dev"
opt-level = 1
debug = true
incremental = false

[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"
