[package]
name = "taceo-zkpassport-oprf-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Client for zkPassport's instance of TACEO:OPRF"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish.workspace = true

[dependencies]
ark-babyjubjub.workspace = true
ark-ff.workspace = true
eyre.workspace = true
rand.workspace = true
taceo-oprf = { workspace = true, features = ["client", "core"] }
zkpassport-oprf-authentication = { package = "taceo-zkpassport-oprf-authentication", path = "../authentication", version = "0.1" }
