[package]
name = "taceo-zkpassport-oprf-mock-oracle"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Mock oracle server for local development of zkPassport OPRF"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "taceo-zkpassport-oprf-mock-oracle"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "signal", "tokio-macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
