[package]
name = "taceo-zkpassport-oprf-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Backend server for zkPassport instance of TACEO:OPRF"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish.workspace = true

[dependencies]
alloy = { workspace = true }
ark-serde-compat = { workspace = true, features = ["babyjubjub"] }
ark-serialize.workspace = true
axum = { workspace = true, features = ["ws"] }
config = { workspace = true }
eyre.workspace = true
humantime.workspace = true
humantime-serde.workspace = true
metrics = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
taceo-nodes-common = { workspace = true, features = ["postgres", "web3"] }
taceo-nodes-observability = { workspace = true }
taceo-oprf = { workspace = true, features = ["service"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
zkpassport-oprf-authentication = { package = "taceo-zkpassport-oprf-authentication", path = "../authentication", version = "0.1" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true
