[package]
name = "taceo-salted-nullifier-authentication"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Authentication module for salted-nullifier instance of TACEO:OPRF"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish.workspace = true

[dependencies]
ark-babyjubjub.workspace = true
ark-serialize.workspace = true
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws"] }
eyre.workspace = true
http = { workspace = true }
reqwest = { workspace = true, features = [
  "json",
  "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
taceo-oprf = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
