[package]
name = "taceo-salted-nullifier-dev-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Dev-Client for salted-nullifier instance of TACEO:OPRF. Used for testing."
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "rpc", "rpc-client-ws"] }
ark-babyjubjub.workspace = true
ark-ff.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
humantime.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rustls.workspace = true
salted-nullifier-authentication = { package = "taceo-salted-nullifier-authentication", path = "../salted-nullifier-authentication", version = "0.1" }
salted-nullifier-client = { package = "taceo-salted-nullifier-client", path = "../salted-nullifier-client", version = "0.1" }
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
taceo-nodes-observability.workspace = true
taceo-oprf = { workspace = true, features = ["dev-client"] }
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
webpki-roots.workspace = true
